--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="../css/responsive.css" />
     <!-- linking font awesome -->
     <link
       rel="stylesheet"
@@ -69,6 +71,7 @@
         <div class="hero-content">
           <h1>Global Disaster Alert App</h1>
           <p>Get alerts for disasters around the world</p>
+          <a href="#"><button id="weather-button">Open App</button></a>
         </div>
       </div>
     </section>
