--- a/html/index.html
+++ b/html/index.html
@@ -27,6 +27,7 @@
     />
   </head>
   <body>
+    <!-- Navigation Menu -->
     <nav>
       <ul class="sidebar">
         <li>
@@ -70,8 +71,7 @@
         </li>
       </ul>
     </nav>
-    <!-- hero section with a background image -->
-
+    <!-- Hero Section with a Background Image -->
     <section id="hero">
       <div class="hero-container">
         <div class="hero-content">
@@ -82,11 +82,10 @@
       </div>
     </section>
 
-    <!-- !card section -->
+    <!-- Three Box Section -->
     <div class="box1">
       <section class="three-boxes">
-        <!-- First Box (Home) -->
-
+        <!-- Home Box -->
         <div class="box home-box">
           <h2>Home</h2>
           <img
@@ -102,7 +101,7 @@
           <p id="output-text">output</p>
         </div>
 
-        <!-- Second Box (Disaster) -->
+        <!-- Disaster Box -->
         <div class="box disaster-box">
           <h2>Disaster</h2>
           <!-- https://via.placeholder.com/150 -->
@@ -116,7 +115,7 @@
           <p id="output-text">output Lorem ipsum dolor sit amet</p>
         </div>
 
-        <!-- Third Box (Global Natural Disaster App) -->
+        <!-- Global Natural Disaster App Box -->
         <div class="main-box">
           <h2>Global Natural Disaster App</h2>
           <p>
@@ -170,9 +169,8 @@
         </div>
       </section>
     </div>
-    <!-- !card section end -->
 
-    <!-- disaster explain card section -->
+    <!-- Disaster Explain Card Section -->
     <div class="cardsTwoBox">
       <div class="disaster-container">
         <div class="disaster-card">
@@ -280,8 +278,12 @@
       </div>
     </div>
 
-    <!--  -->
+    <!-- disaster-list -->
+
+    <!-- This is where we will display disaster cards -->
+
     <!-- <i class="fa-solid fa-toggle-on" style="color: #B197FC;"></i> -->
     <script src="../JS/app.js"></script>
+    <script src="../JS/data.js"></script>
   </body>
 </html>
