nasa api connect for todays astronomy picture APOD

--- a/html/Disaster.html
+++ b/html/Disaster.html
@@ -27,7 +27,8 @@
             </div>
             <div class="world-map">
                 <!-- Placeholder for the Map Image or Map Integration -->
-                <img src="path-to-map-image" alt="World Map with Disaster Markers" />
+                <img src="../assets/image/DALL·E 2024-10-24 18.33.23 - A clean, modern UI design for a web version of the Global Natural Disaster Alert App. The homepage features a dashboard filled with disaster cards, ea.webp"
+                    alt="World Map with Disaster Markers" />
             </div>
         </section>
 
