--- a/html/test.html
+++ b/html/test.html
@@ -3,17 +3,60 @@
 
 <head>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #1a1a1a;
+            color: #ffffff;
+        }
 
+        #apod-container {
+            text-align: center;
+            max-width: 600px;
+        }
+
+        img {
+            max-width: 100%;
+            border-radius: 8px;
+        }
     </style>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Disaster Alert Dashboard</title>
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Astronomy Picture of the Day</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div id="apod-container">
+        <h1>Astronomy Picture of the Day</h1>
+        <h2 id="title"></h2>
+        <img id="apod-image" alt="Astronomy Picture of the Day">
+        <p id="date"></p>
+        <p id="description"></p>
+    </div>
+    <script>
+        const apiKey = 'rIBvAPngmMs4Qna99Z4A0kWcqgEsTdALQmdfgGZF'; // Replace with your actual API key
+        const apiUrl = `https://api.nasa.gov/planetary/apod?api_key=${apiKey}`;
+
+        fetch(apiUrl)
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('title').textContent = data.title;
+                document.getElementById('apod-image').src = data.url;
+                document.getElementById('date').textContent = `Date: ${data.date}`;
+                document.getElementById('description').textContent = data.explanation;
+            })
+            .catch(error => {
+                console.error('Error fetching APOD:', error);
+                document.getElementById('description').textContent = 'Could not load the image. Please try again later.';
+            });
 
 
+    </script>
 </body>
 
 </html>
