--- a/html/testTwo.html
+++ b/html/testTwo.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARK Starmap with Real-Time Solar System</title>
+    <title>Dynamic Starmap with Moving Planets</title>
     <style>
         * {
             margin: 0;
@@ -30,99 +30,142 @@
             border-radius: 5px;
         }
 
-        #info-panel h1 {
-            font-size: 18px;
-        }
-
-        #info-panel p {
-            font-size: 14px;
-            margin: 5px 0;
+        .planet-details {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px;
+            border-radius: 5px;
+            pointer-events: none;
         }
     </style>
 </head>
 
 <body>
     <div id="info-panel">
-        <h1>ARK Starmap with Real-Time Solar System</h1>
-        <p>Click and drag to rotate. Zoom to explore the starfield and Solar System.</p>
+        <h1>Dynamic Starmap with Moving Planets</h1>
+        <p>Click and drag to explore. Zoom out to see the full galaxy view.</p>
     </div>
 
+    <!-- Include the Three.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
     <script>
         // Scene setup
         const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 3000);
-        camera.position.z = 500;
+        const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
+        camera.position.z = 600;
 
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // Light source
-        const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+        // Ambient light for base illumination
+        const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
         scene.add(ambientLight);
 
-        // Star field
-        const starGeometry = new THREE.BufferGeometry();
-        const starCount = 3000;
-        const starPositions = [];
+        // Dynamic Light
+        const light = new THREE.PointLight(0xffffff, 1, 1000);
+        light.position.set(0, 0, 0);
+        scene.add(light);
 
-        for (let i = 0; i < starCount; i++) {
-            const radius = 1200;
-            const theta = Math.random() * 2 * Math.PI;
-            const phi = Math.acos(2 * Math.random() - 1);
-            const x = radius * Math.sin(phi) * Math.cos(theta);
-            const y = radius * Math.sin(phi) * Math.sin(theta);
-            const z = radius * Math.cos(phi);
-            starPositions.push(x, y, z);
+        // STAR FIELD
+        function createStarField() {
+            const starGeometry = new THREE.BufferGeometry();
+            const starMaterial = new THREE.PointsMaterial({ color: 0x88ccff, size: 0.7 });
+            const starCount = 1500;
+            const positions = [];
+
+            for (let i = 0; i < starCount; i++) {
+                const x = (Math.random() - 0.5) * 4000;
+                const y = (Math.random() - 0.5) * 4000;
+                const z = (Math.random() - 0.5) * 4000;
+                positions.push(x, y, z);
+            }
+
+            starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
+            const stars = new THREE.Points(starGeometry, starMaterial);
+            scene.add(stars);
         }
+        createStarField();
 
-        starGeometry.setAttribute('position', new THREE.Float32BufferAttribute(starPositions, 3));
-        const starMaterial = new THREE.PointsMaterial({ color: 0x88ccff, size: 0.5 });
-        const stars = new THREE.Points(starGeometry, starMaterial);
-        scene.add(stars);
-
-        // Solar System setup
-        const sunGeometry = new THREE.SphereGeometry(10, 32, 32);
+        // SUN
         const sunTexture = new THREE.TextureLoader().load('../assets/image/sun.png');
-        const sunMaterial = new THREE.MeshBasicMaterial({ map: sunTexture });
-        const sun = new THREE.Mesh(sunGeometry, sunMaterial);
+        const sun = new THREE.Mesh(new THREE.SphereGeometry(20, 32, 32), new THREE.MeshBasicMaterial({ map: sunTexture }));
         scene.add(sun);
 
-        // Planet data (scaled distances and real-time speeds)
-        const planets = [
-            { name: "Mercury", distance: 20, size: 0.7, orbitSpeed: 0.0002 },
-            { name: "Venus", distance: 30, size: 2, orbitSpeed: 0.0001 },
-            { name: "Earth", distance: 40, size: 3, orbitSpeed: 0.00008 },
-            { name: "Mars", distance: 50, size: 1.2, orbitSpeed: 0.00005 },
-            { name: "Jupiter", distance: 80, size: 5, orbitSpeed: 0.00002 },
-            { name: "Saturn", distance: 100, size: 2.6, orbitSpeed: 0.000015 },
-            { name: "Uranus", distance: 120, size: 3, orbitSpeed: 0.00001 },
-            { name: "Neptune", distance: 140, size: 2.8, orbitSpeed: 0.000007 },
+        // PLANETS with Moons
+        const planetsData = [
+            { name: "Mercury", distance: 60, size: 2, speed: 0.02, texture: '../assets/image/mercury.png' },
+            { name: "Venus", distance: 100, size: 4, speed: 0.015, texture: '../assets/image/venus.png' },
+            { name: "Earth", distance: 140, size: 4.5, speed: 0.01, texture: '../assets/image/earth.png', moons: 1 },
+            { name: "Mars", distance: 180, size: 3.5, speed: 0.008, texture: '../assets/image/mars.png', moons: 2 },
+            { name: "Jupiter", distance: 240, size: 8, speed: 0.005, texture: '../assets/image/jupiter.png', moons: 4 },
+            { name: "Saturn", distance: 300, size: 7, speed: 0.003, texture: '../assets/image/saturn.png', moons: 6 },
+            { name: "Uranus", distance: 360, size: 5, speed: 0.002, texture: '../assets/image/uranus.png', moons: 3 },
+            { name: "Neptune", distance: 420, size: 5, speed: 0.0015, texture: '../assets/image/neptune.png', moons: 1 },
         ];
 
-        // Load planet textures
-        const textureLoader = new THREE.TextureLoader();
-
-        planets.forEach(planet => {
-            planet.texture = textureLoader.load(`../assets/image/${planet.name.toLowerCase().replace(' ', '')}.png`);
-        });
-
         const planetMeshes = [];
+        const moonMeshes = [];
 
-        // Create each planet
-        planets.forEach(planet => {
-            const geometry = new THREE.SphereGeometry(planet.size, 16, 16);
-            const material = new THREE.MeshBasicMaterial({ map: planet.texture });
-            const mesh = new THREE.Mesh(geometry, material);
-            mesh.position.set(planet.distance, 0, 0);
-            scene.add(mesh);
-            mesh.name = planet.name;
-            planetMeshes.push({ mesh, distance: planet.distance, orbitSpeed: planet.orbitSpeed });
+        planetsData.forEach(planet => {
+            const texture = new THREE.TextureLoader().load(planet.texture);
+            const planetMesh = new THREE.Mesh(new THREE.SphereGeometry(planet.size, 16, 16), new THREE.MeshBasicMaterial({ map: texture }));
+            planetMesh.userData = { name: planet.name, distance: planet.distance, speed: planet.speed, size: planet.size, angle: Math.random() * Math.PI * 2 };
+            scene.add(planetMesh);
+            planetMeshes.push(planetMesh);
+
+            for (let i = 0; i < (planet.moons || 0); i++) {
+                const moon = new THREE.Mesh(new THREE.SphereGeometry(0.7, 8, 8), new THREE.MeshBasicMaterial({ color: 0x888888 }));
+                moon.userData = { distance: planet.size + 3 + i * 1.5, speed: 0.02 + i * 0.01, parent: planetMesh, angle: Math.random() * Math.PI * 2 };
+                moonMeshes.push(moon);
+                scene.add(moon);
+            }
         });
 
-        // Rotate and zoom controls
+        // ASTEROID BELT
+        const asteroidCount = 500;
+        for (let i = 0; i < asteroidCount; i++) {
+            const asteroid = new THREE.Mesh(
+                new THREE.SphereGeometry(0.2, 8, 8),
+                new THREE.MeshBasicMaterial({ color: 0xaaaaaa })
+            );
+            const angle = Math.random() * Math.PI * 2;
+            const radius = 200 + Math.random() * 30;
+            asteroid.position.set(Math.cos(angle) * radius, (Math.random() - 0.5) * 5, Math.sin(angle) * radius);
+            asteroid.userData = { angle: angle, distance: radius, speed: 0.001 };
+            scene.add(asteroid);
+        }
+
+        // ANIMATION FUNCTION
+        function animate() {
+            requestAnimationFrame(animate);
+
+            planetMeshes.forEach(planet => {
+                planet.userData.angle += planet.userData.speed;
+                planet.position.x = Math.cos(planet.userData.angle) * planet.userData.distance;
+                planet.position.z = Math.sin(planet.userData.angle) * planet.userData.distance;
+            });
+
+            moonMeshes.forEach(moon => {
+                const parent = moon.userData.parent;
+                moon.userData.angle += moon.userData.speed;
+                moon.position.x = parent.position.x + Math.cos(moon.userData.angle) * moon.userData.distance;
+                moon.position.z = parent.position.z + Math.sin(moon.userData.angle) * moon.userData.distance;
+            });
+
+            // Dynamic Light Animation
+            light.position.x = Math.cos(Date.now() * 0.001) * 100;
+            light.position.z = Math.sin(Date.now() * 0.001) * 100;
+
+            renderer.render(scene, camera);
+        }
+
+        animate();
+
+        // Mouse interaction for rotating the scene
         let isDragging = false;
         let previousMousePosition = { x: 0, y: 0 };
 
@@ -139,8 +182,8 @@
                 y: event.clientY - previousMousePosition.y,
             };
 
-            scene.rotation.y += deltaMove.x * 0.005;
-            scene.rotation.x += deltaMove.y * 0.005;
+            scene.rotation.y += deltaMove.x * 0.002;
+            scene.rotation.x += deltaMove.y * 0.002;
             previousMousePosition = { x: event.clientX, y: event.clientY };
         }
 
@@ -148,31 +191,16 @@
             isDragging = false;
         }
 
+        window.addEventListener('mousedown', onMouseDown);
+        window.addEventListener('mousemove', onMouseMove);
+        window.addEventListener('mouseup', onMouseUp);
+
+        // Zoom control
         function onWheel(event) {
             camera.position.z += event.deltaY * 0.1;
             camera.position.z = Math.max(50, Math.min(1200, camera.position.z));
         }
-
-        window.addEventListener('mousedown', onMouseDown);
-        window.addEventListener('mousemove', onMouseMove);
-        window.addEventListener('mouseup', onMouseUp);
         window.addEventListener('wheel', onWheel);
-
-        // Animation loop
-        function animate() {
-            requestAnimationFrame(animate);
-
-            // Animate planet orbits with real-time speeds
-            const time = Date.now();
-            planetMeshes.forEach(planet => {
-                planet.mesh.position.x = planet.distance * Math.cos(time * planet.orbitSpeed);
-                planet.mesh.position.z = planet.distance * Math.sin(time * planet.orbitSpeed);
-            });
-
-            renderer.render(scene, camera);
-        }
-
-        animate();
 
         // Resize handling
         window.addEventListener('resize', () => {
@@ -180,14 +208,48 @@
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
         });
-        // Increase brightness of the solar system
-        scene.traverse(child => {
-            if (child.type === 'Mesh' && child.material.emissive) {
-                child.material.emissive.setHex(0xffffff);
-                child.material.emissiveIntensity = 3;
+
+        // Keyboard handling
+        document.addEventListener('keydown', event => {
+            if (event.code === 'KeyR') {
+                camera.position.set(0, 0, 1000);
+                camera.rotation.set(0, 0, 0);
             }
         });
 
+        // Hover to show planet details
+        planetMeshes.forEach(planet => {
+            planet.on('mouseover', event => {
+                const details = document.createElement('div');
+                details.classList.add('planet-details');
+                details.style.position = 'absolute';
+                details.style.top = `${event.clientY}px`;
+                details.style.left = `${event.clientX}px`;
+                details.innerHTML = `
+                    <h2>${planet.userData.name}</h2>
+                    <p>Distance: ${planet.userData.distance} AU</p>
+                    <p>Size: ${planet.userData.size} km</p>
+                    <p>Speed: ${planet.userData.speed} AU/s</p>
+                `;
+                document.body.appendChild(details);
+            });
+
+            planet.on('mouseout', () => {
+                const details = document.querySelector('.planet-details');
+                if (details) details.remove();
+            });
+        });
+
+        // Zoom on planets
+        planetMeshes.forEach(planet => {
+            planet.on('dblclick', event => {
+                const vector = new THREE.Vector3();
+                planet.getWorldPosition(vector);
+                camera.position.copy(vector);
+                camera.position.z += 10;
+                camera.lookAt(planet.position);
+            });
+        });
     </script>
 </body>
 
