app color change

--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
     <ul class="sidebar">
       <li>
         <a href="#" id="closeSidebar"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960"
-            width="24px" fill="#5f6368">
+            width="24px" fill="#fff">
             <path
               d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z" />
           </svg></a>
@@ -42,7 +42,7 @@
       <li class="hideOnMobile"><a href="#">Register</a></li>
       <li class="hideOnpc">
         <a href="#" id="openSidebar">
-          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#fff">
             <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
           </svg></a>
       </li>
@@ -65,7 +65,7 @@
       <!-- Home Box -->
       <div class="box home-box">
         <h2>Home</h2>
-        <img id="earth-image" src="../assets/image/earth-image.png" alt="Earth Image" />
+        <img id="earth-image" src="../assets/image/earth.png" alt="Earth Image" />
         <div class="temperature-bar">
           <span class="temp-label">Temperature: 25°C</span>
           <div class="bar">
@@ -80,7 +80,9 @@
       <div class="box disaster-box">
         <h2>Disaster</h2>
         <!-- https://via.placeholder.com/150 -->
-        <img src="https://via.placeholder.com/10" alt="Disaster Image" />
+        <img
+          src="../assets/image/DALL·E 2024-10-24 02.21.56 - A clean, modern UI design for a global natural disaster alert app. The home page features a dashboard with disaster cards showing the type, location, .webp"
+          alt="Disaster Image" />
         <span>Click to see more</span>
         <div class="temperature-bar">
           <span class="temp-label">Temperature: 30°C</span>
