--- a/html/index.html
+++ b/html/index.html
@@ -124,9 +124,9 @@
           alt="Hurricane Image" class="disaster-img" />
         <h1>Hurricane</h1>
         <p>
-          Hurricanes are powerful storms that form over warm ocean waters and
-          move toward land, causing wind and rain damage.
+          Hurricanes are powerful storms that form over warm ocean waters.
         </p>
+
       </div>
 
       <div class="disaster-card">
