--- a/PlanetDoc/html/earthDoc.html
+++ b/PlanetDoc/html/earthDoc.html
@@ -41,7 +41,7 @@
         is often referred to as the Earth due to its proximity to the Sun.
       </p>
     </main>
-
+<!-- windows -->
     <script src="../JS/menu.js"></script>
   </body>
 </html>
